--- a/tutorials/basic/job-inputs/pipeline.yml
+++ b/tutorials/basic/job-inputs/pipeline.yml
@@ -4,7 +4,7 @@ resources:
   type: git
   source:
     uri: https://github.com/lluminita/concourse-tutorial.git
-    branch: develop
+    branch: master
 
 - name: resource-app
   type: git
